# proximity-tool

./: .gitmodules  CMakeLists.txt  LICENSE.md  README.md
demo/unityPX/unityPX/Assets/: Demo.unity
demo/unityPX/unityPX/Assets/Scripts/: OscServer.cs
demo/unityPX/unityPX/ProjectSettings/: ProjectSettings.asset
etc/cmake/: FindOpenNI2.cmake
src/: CMakeLists.txt  interface_config.hpp.cmake  interface_kinect.hpp  interface_openni2.cpp  interface_openni2.hpp  interface_rgbd.cpp  interface_rgbd.hpp  tool-main.cpp
